--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "morgan": "^1.9.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "serve-favicon": "^2.5.0"
   },
